Kubernetes-Website/01-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: backyard
  name: website
  labels:
    app: backyard
spec:
  selector:
    matchLabels:
      app: backyard
  template:
    metadata:
      labels:
        app: backyard
    spec:
      containers:
        - name: website-container
          image: dockercloud/hello-world:latest
          ports:
            - name: http
              containerPort: 80
            - name: secondary
              containerPort: 8080
