Kubernetes-Website/02-services.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: backyard
  name: website
spec:
  type: NodePort
  selector:
    app: backyard
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: secondary
      port: 8080
      targetPort: 8080
